@@ -1,3 +1,6 @@
+2020/09/15
+• User avatar appears behind meme text.
+• Ability to delete bugs through Discord.
 2020/09/04
 • Bot can now make memes.
 2020/08/08
